# ztp_r

./: Cargo.toml  Dockerfile
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_check.rs
