[package]
name = "ztp_r"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

[dependencies]
axum = { version="0.8.4", features=["tracing", "macros"] }
serde = "1.0.219"
serde_json = "1.0.142"
secrecy = { version="0.10.3", features=["serde"] }
tokio = { version="1.47.1", features=["full"] }
tower-http = { version="0.6.6", features=["trace"] }
tower = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features=["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
config = "0.15.13"
uuid = {version = "1.17.0", features = ["v4"]}
chrono = {version = "0.4.41", default-features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.22"
once_cell = "1"
